--- a/src/main/java/com/criollo/machmillenium/vistas/Inicio.form
+++ b/src/main/java/com/criollo/machmillenium/vistas/Inicio.form
@@ -1,33 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.criollo.machmillenium.vistas.Inicio">
   <grid id="27dc6" binding="panel" layout-manager="FormLayout">
-    <rowspec value="center:max(d;4px):noGrow"/>
-    <rowspec value="center:48px:noGrow"/>
     <rowspec value="center:d:grow"/>
     <rowspec value="center:max(d;4px):noGrow"/>
-    <colspec value="fill:d:grow"/>
-    <colspec value="left:4dlu:noGrow"/>
+    <rowspec value="center:48px:noGrow"/>
+    <rowspec value="center:536px:grow"/>
+    <rowspec value="center:max(d;4px):noGrow"/>
+    <colspec value="fill:362px:grow"/>
     <colspec value="fill:d:grow"/>
     <constraints>
-      <xy x="20" y="20" width="962" height="609"/>
+      <xy x="20" y="20" width="1138" height="768"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
       <component id="c07c7" class="javax.swing.JLabel" binding="fondo">
         <constraints>
-          <grid row="0" column="2" row-span="4" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="1" row-span="5" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
           <forms/>
         </constraints>
         <properties>
           <alignmentY value="0.0"/>
-          <icon value="logo.png"/>
+          <icon value="main.jpg"/>
           <text value=""/>
         </properties>
       </component>
       <grid id="40c74" layout-manager="GridBagLayout">
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="2" indent="0" use-parent-layout="false">
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="2" indent="0" use-parent-layout="false">
             <preferred-size width="843" height="304"/>
           </grid>
           <forms top="1" left="1" bottom="1" right="1"/>
@@ -43,7 +43,7 @@
               <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="1" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
               </grid>
-              <gridbag weightx="1.0" weighty="0.0"/>
+              <gridbag top="0" left="4" bottom="0" right="4" weightx="1.0" weighty="0.0"/>
             </constraints>
             <properties>
               <text value=""/>
@@ -76,18 +76,9 @@
               <grid row="4" column="0" row-span="1" col-span="2" vsize-policy="1" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
               </grid>
-              <gridbag weightx="1.0" weighty="0.0"/>
+              <gridbag top="0" left="4" bottom="0" right="4" weightx="1.0" weighty="0.0"/>
             </constraints>
             <properties/>
-          </component>
-          <component id="7b342" class="javax.swing.JSeparator">
-            <constraints>
-              <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-              <gridbag weightx="0.0" weighty="0.4"/>
-            </constraints>
-            <properties>
-              <orientation value="1"/>
-            </properties>
           </component>
           <component id="14875" class="javax.swing.JSeparator">
             <constraints>
@@ -103,7 +94,7 @@
               <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="145" height="34"/>
               </grid>
-              <gridbag top="0" left="0" bottom="0" right="4" weightx="1.0" weighty="0.1"/>
+              <gridbag top="0" left="4" bottom="0" right="4" weightx="1.0" weighty="0.1"/>
             </constraints>
             <properties>
               <margin top="0" left="0" bottom="0" right="4"/>
@@ -118,7 +109,7 @@
               <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="191" height="34"/>
               </grid>
-              <gridbag top="0" left="4" bottom="0" right="0" weightx="1.0" weighty="0.1"/>
+              <gridbag top="0" left="4" bottom="0" right="4" weightx="1.0" weighty="0.1"/>
             </constraints>
             <properties>
               <margin top="0" left="0" bottom="0" right="0"/>
@@ -128,16 +119,34 @@
               <text value="Salir"/>
             </properties>
           </component>
+          <component id="7b342" class="javax.swing.JSeparator">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <gridbag weightx="0.0" weighty="0.2"/>
+            </constraints>
+            <properties>
+              <orientation value="1"/>
+            </properties>
+          </component>
         </children>
       </grid>
       <component id="c8142" class="javax.swing.JLabel">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="1" hsize-policy="2" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-          <forms defaultalign-horz="false"/>
+          <grid row="1" column="0" row-span="2" col-span="1" vsize-policy="1" hsize-policy="2" anchor="1" fill="0" indent="0" use-parent-layout="false"/>
+          <forms defaultalign-horz="false" defaultalign-vert="false"/>
         </constraints>
         <properties>
-          <font name="Open Sans" size="48"/>
-          <text value="Bienvenido"/>
+          <font size="36"/>
+          <text value="Mach Millenium S.A"/>
+        </properties>
+      </component>
+      <component id="bc7" class="javax.swing.JSeparator">
+        <constraints>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <forms defaultalign-horz="false" defaultalign-vert="false"/>
+        </constraints>
+        <properties>
+          <preferredSize width="0" height="50"/>
         </properties>
       </component>
     </children>
