--- a/src/main/java/com/criollo/machmillenium/vistas/Inicio.form
+++ b/src/main/java/com/criollo/machmillenium/vistas/Inicio.form
@@ -1,157 +1,171 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.criollo.machmillenium.vistas.Inicio">
-  <grid id="27dc6" binding="panel" layout-manager="FormLayout">
-    <rowspec value="center:d:grow"/>
-    <rowspec value="center:max(d;4px):noGrow"/>
-    <rowspec value="center:48px:noGrow"/>
-    <rowspec value="center:536px:grow"/>
-    <rowspec value="center:max(d;4px):noGrow"/>
-    <colspec value="fill:362px:grow"/>
-    <colspec value="fill:d:grow"/>
+  <grid id="27dc6" binding="panelPrincipal" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+    <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="1138" height="768"/>
+      <xy x="20" y="20" width="1144" height="1908"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
-      <component id="c07c7" class="javax.swing.JLabel" binding="fondo">
+      <grid id="9e080" binding="panel" layout-manager="FormLayout">
+        <rowspec value="center:53px:noGrow"/>
+        <rowspec value="center:max(d;4px):noGrow"/>
+        <rowspec value="center:d:grow"/>
+        <colspec value="fill:364px:noGrow"/>
+        <colspec value="fill:d:grow"/>
         <constraints>
-          <grid row="0" column="1" row-span="5" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
-          <forms/>
-        </constraints>
-        <properties>
-          <alignmentY value="0.0"/>
-          <icon value="main.jpg"/>
-          <text value=""/>
-        </properties>
-      </component>
-      <grid id="40c74" layout-manager="GridBagLayout">
-        <constraints>
-          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="2" indent="0" use-parent-layout="false">
-            <preferred-size width="843" height="304"/>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <minimum-size width="1136" height="783"/>
+            <preferred-size width="1136" height="783"/>
           </grid>
-          <forms top="1" left="1" bottom="1" right="1"/>
         </constraints>
         <properties>
-          <minimumSize width="360" height="493"/>
-          <preferredSize width="360" height="493"/>
+          <preferredSize width="1130" height="779"/>
         </properties>
         <border type="none"/>
         <children>
-          <component id="7e522" class="javax.swing.JFormattedTextField" binding="campoCorreo">
+          <grid id="40c74" layout-manager="GridBagLayout">
             <constraints>
-              <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="1" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="2" indent="0" use-parent-layout="false">
+                <preferred-size width="843" height="304"/>
               </grid>
-              <gridbag top="0" left="4" bottom="0" right="4" weightx="1.0" weighty="0.0"/>
+              <forms top="1" left="1" bottom="1" right="1"/>
             </constraints>
             <properties>
+              <minimumSize width="360" height="493"/>
+              <preferredSize width="360" height="493"/>
+            </properties>
+            <border type="none"/>
+            <children>
+              <component id="7e522" class="javax.swing.JFormattedTextField" binding="campoCorreo">
+                <constraints>
+                  <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="1" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                    <preferred-size width="150" height="-1"/>
+                  </grid>
+                  <gridbag top="0" left="4" bottom="0" right="4" weightx="1.0" weighty="0.0"/>
+                </constraints>
+                <properties>
+                  <text value=""/>
+                </properties>
+              </component>
+              <component id="62f0c" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="1" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                    <preferred-size width="50" height="50"/>
+                  </grid>
+                  <gridbag top="0" left="4" bottom="0" right="0" weightx="0.8" weighty="0.1"/>
+                </constraints>
+                <properties>
+                  <text value="Correo electrónico"/>
+                </properties>
+              </component>
+              <component id="15f3c" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                    <preferred-size width="72" height="98"/>
+                  </grid>
+                  <gridbag top="0" left="4" bottom="0" right="0" weightx="1.0" weighty="0.1"/>
+                </constraints>
+                <properties>
+                  <maximumSize width="79" height="17"/>
+                  <minimumSize width="79" height="17"/>
+                  <preferredSize width="79" height="17"/>
+                  <text value="Contraseña"/>
+                </properties>
+              </component>
+              <component id="55e0a" class="javax.swing.JPasswordField" binding="campoClave">
+                <constraints>
+                  <grid row="4" column="0" row-span="1" col-span="2" vsize-policy="1" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                    <preferred-size width="150" height="-1"/>
+                  </grid>
+                  <gridbag top="0" left="4" bottom="0" right="4" weightx="1.0" weighty="0.0"/>
+                </constraints>
+                <properties/>
+              </component>
+              <component id="14875" class="javax.swing.JSeparator">
+                <constraints>
+                  <grid row="6" column="0" row-span="1" col-span="2" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                  <gridbag weightx="0.0" weighty="0.4"/>
+                </constraints>
+                <properties>
+                  <orientation value="1"/>
+                </properties>
+              </component>
+              <component id="5ab3f" class="javax.swing.JButton" binding="btnIniciar">
+                <constraints>
+                  <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                    <preferred-size width="145" height="34"/>
+                  </grid>
+                  <gridbag top="0" left="4" bottom="0" right="4" weightx="1.0" weighty="0.1"/>
+                </constraints>
+                <properties>
+                  <margin top="0" left="0" bottom="0" right="4"/>
+                  <maximumSize width="97" height="34"/>
+                  <minimumSize width="97" height="34"/>
+                  <preferredSize width="97" height="34"/>
+                  <text value="Iniciar Sesión"/>
+                </properties>
+              </component>
+              <component id="d358e" class="javax.swing.JButton" binding="btnSalir">
+                <constraints>
+                  <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                    <preferred-size width="191" height="34"/>
+                  </grid>
+                  <gridbag top="0" left="4" bottom="0" right="4" weightx="1.0" weighty="0.1"/>
+                </constraints>
+                <properties>
+                  <margin top="0" left="0" bottom="0" right="0"/>
+                  <maximumSize width="97" height="34"/>
+                  <minimumSize width="97" height="34"/>
+                  <preferredSize width="97" height="34"/>
+                  <text value="Salir"/>
+                </properties>
+              </component>
+              <component id="7b342" class="javax.swing.JSeparator">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                  <gridbag weightx="0.0" weighty="0.2"/>
+                </constraints>
+                <properties>
+                  <orientation value="1"/>
+                </properties>
+              </component>
+            </children>
+          </grid>
+          <component id="c07c7" class="javax.swing.JLabel" binding="fondo">
+            <constraints>
+              <grid row="0" column="1" row-span="3" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+              <forms/>
+            </constraints>
+            <properties>
+              <alignmentY value="0.0"/>
+              <icon value="main.jpg"/>
               <text value=""/>
             </properties>
           </component>
-          <component id="62f0c" class="javax.swing.JLabel">
+          <component id="c8142" class="javax.swing.JLabel">
             <constraints>
-              <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="1" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                <preferred-size width="50" height="50"/>
-              </grid>
-              <gridbag top="0" left="4" bottom="0" right="0" weightx="0.8" weighty="0.1"/>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="2" anchor="1" fill="0" indent="0" use-parent-layout="false"/>
+              <forms defaultalign-horz="false" defaultalign-vert="false"/>
             </constraints>
             <properties>
-              <text value="Correo electrónico"/>
+              <font size="36"/>
+              <text value="Mach Millenium S.A"/>
             </properties>
           </component>
-          <component id="15f3c" class="javax.swing.JLabel">
+          <component id="ca854" class="javax.swing.JSeparator">
             <constraints>
-              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                <preferred-size width="72" height="98"/>
-              </grid>
-              <gridbag top="0" left="4" bottom="0" right="0" weightx="1.0" weighty="0.1"/>
-            </constraints>
-            <properties>
-              <maximumSize width="79" height="17"/>
-              <minimumSize width="79" height="17"/>
-              <preferredSize width="79" height="17"/>
-              <text value="Contraseña"/>
-            </properties>
-          </component>
-          <component id="55e0a" class="javax.swing.JPasswordField" binding="campoClave">
-            <constraints>
-              <grid row="4" column="0" row-span="1" col-span="2" vsize-policy="1" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
-              </grid>
-              <gridbag top="0" left="4" bottom="0" right="4" weightx="1.0" weighty="0.0"/>
-            </constraints>
-            <properties/>
-          </component>
-          <component id="14875" class="javax.swing.JSeparator">
-            <constraints>
-              <grid row="6" column="0" row-span="1" col-span="2" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-              <gridbag weightx="0.0" weighty="0.4"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <forms defaultalign-horz="false" defaultalign-vert="false"/>
             </constraints>
             <properties>
               <orientation value="1"/>
-            </properties>
-          </component>
-          <component id="5ab3f" class="javax.swing.JButton" binding="btnIniciar">
-            <constraints>
-              <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="145" height="34"/>
-              </grid>
-              <gridbag top="0" left="4" bottom="0" right="4" weightx="1.0" weighty="0.1"/>
-            </constraints>
-            <properties>
-              <margin top="0" left="0" bottom="0" right="4"/>
-              <maximumSize width="97" height="34"/>
-              <minimumSize width="97" height="34"/>
-              <preferredSize width="97" height="34"/>
-              <text value="Iniciar Sesión"/>
-            </properties>
-          </component>
-          <component id="d358e" class="javax.swing.JButton" binding="btnSalir">
-            <constraints>
-              <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="191" height="34"/>
-              </grid>
-              <gridbag top="0" left="4" bottom="0" right="4" weightx="1.0" weighty="0.1"/>
-            </constraints>
-            <properties>
-              <margin top="0" left="0" bottom="0" right="0"/>
-              <maximumSize width="97" height="34"/>
-              <minimumSize width="97" height="34"/>
-              <preferredSize width="97" height="34"/>
-              <text value="Salir"/>
-            </properties>
-          </component>
-          <component id="7b342" class="javax.swing.JSeparator">
-            <constraints>
-              <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-              <gridbag weightx="0.0" weighty="0.2"/>
-            </constraints>
-            <properties>
-              <orientation value="1"/>
+              <preferredSize width="3" height="0"/>
             </properties>
           </component>
         </children>
       </grid>
-      <component id="c8142" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="1" column="0" row-span="2" col-span="1" vsize-policy="1" hsize-policy="2" anchor="1" fill="0" indent="0" use-parent-layout="false"/>
-          <forms defaultalign-horz="false" defaultalign-vert="false"/>
-        </constraints>
-        <properties>
-          <font size="36"/>
-          <text value="Mach Millenium S.A"/>
-        </properties>
-      </component>
-      <component id="bc7" class="javax.swing.JSeparator">
-        <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-          <forms defaultalign-horz="false" defaultalign-vert="false"/>
-        </constraints>
-        <properties>
-          <preferredSize width="0" height="50"/>
-        </properties>
-      </component>
     </children>
   </grid>
 </form>
