--- a/src/main/java/com/criollo/machmillenium/vistas/emergentes/personal/Modificar.form
+++ b/src/main/java/com/criollo/machmillenium/vistas/emergentes/personal/Modificar.form
@@ -132,7 +132,7 @@
               </component>
             </children>
           </grid>
-          <component id="989e9" class="javax.swing.JFormattedTextField" binding="formattedTextField1" custom-create="true" default-binding="true">
+          <component id="989e9" class="javax.swing.JFormattedTextField" binding="formattedTextField1" default-binding="true">
             <constraints>
               <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
