--- a/src/main/java/com/criollo/machmillenium/vistas/admin/Administrador.form
+++ b/src/main/java/com/criollo/machmillenium/vistas/admin/Administrador.form
@@ -44,6 +44,7 @@
                   <autoCreateRowSorter value="true"/>
                   <preferredSize width="535" height="450"/>
                   <requestFocusEnabled value="false"/>
+                  <showVerticalLines value="false"/>
                 </properties>
               </component>
               <grid id="2dab5" layout-manager="GridBagLayout">
@@ -66,39 +67,6 @@
                       <text value="Agregar"/>
                     </properties>
                   </component>
-                  <component id="48526" class="javax.swing.JButton" binding="btnAlternarCliente">
-                    <constraints>
-                      <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                      <gridbag weightx="0.0" weighty="0.0"/>
-                    </constraints>
-                    <properties>
-                      <label value="Alternar estado"/>
-                      <text value="Alternar estado"/>
-                    </properties>
-                  </component>
-                  <component id="3ffe7" class="javax.swing.JButton" binding="btnEditarCliente">
-                    <constraints>
-                      <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                      <gridbag weightx="0.0" weighty="0.0"/>
-                    </constraints>
-                    <properties>
-                      <label value="Editar"/>
-                      <preferredSize width="131" height="30"/>
-                      <text value="Editar"/>
-                    </properties>
-                  </component>
-                  <vspacer id="c36e5">
-                    <constraints>
-                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-                      <gridbag weightx="0.0" weighty="0.0"/>
-                    </constraints>
-                  </vspacer>
-                  <vspacer id="df273">
-                    <constraints>
-                      <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-                      <gridbag weightx="0.0" weighty="0.0"/>
-                    </constraints>
-                  </vspacer>
                 </children>
               </grid>
             </children>
